--- a/pages/about/index.wxml
+++ b/pages/about/index.wxml
@@ -6,7 +6,7 @@
   <view class="app-name"></view>
 
   <view class="tv-content">
-    这是一款运动健康为主的小程序，您可以通过每日的运动步数免费兑换平台内的任何商品。当然您还可以通过邀请好友的方式快速积攒金币兑换心仪的商品。
+    这是一款运动健康为主的小程序，您可以通过每日的运动步数来提升您的排名。排名会带来更多的福利。
   </view>
 
   <view class="tv-content">
