--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -39,30 +39,30 @@ page {
 }
 
 .img-top-right {
-  width: 183rpx;
-  height: 117rpx;
+  width: 156rpx;
+  height: 100rpx;
   float: right;
   margin-top: -50rpx;
   margin-right: 26rpx;
 }
 
 .img-bottom-left {
-  width: 61rpx;
-  height: 54rpx;
+  width: 52rpx;
+  height: 46rpx;
   margin: 0 0 50rpx 26rpx;
 }
 
 /* 兑换运动步数 */
 .convert-steps {
-  width: 384rpx;
-  height: 350rpx;
+  width: 329rpx;
+  height: 300rpx;
   position: relative;
   margin: 0 auto;
 }
 
 .cs-bg {
-  width: 384rpx;
-  height: 350rpx;
+  width: 329rpx;
+  height: 300rpx;
   position: absolute;
 }
 
@@ -76,7 +76,7 @@ page {
 }
 
 .cs-tv .cs-tv-f {
-  font-size: 34rpx;
+  font-size: 30rpx;
   margin-top: 22%;
   color: #000000;
 }
@@ -87,35 +87,35 @@ page {
 } */
 
 .cs-tv .cs-tv-n {
-  font-size: 60rpx;
+  font-size: 50rpx;
   font-weight: bold;
   color: #000000;
   /* margin-top: 10rpx; */
 }
 
 .cs-tv .cs-tv-c {
-  width: 230rpx;
-  height: 60rpx;
-  line-height: 60rpx;
-  /* font-size: 28rpx; */
+  width: 200rpx;
+  height: 51rpx;
+  line-height: 51rpx;
+  font-size: 28rpx;
   text-align: center;
   color: #F18800;
   background: rgba(241, 136, 0, 0.2);
-  border-radius: 30px;
+  border-radius: 25px;
   margin-top: 10rpx;
 }
 
 .cs-img-person {
-  width: 229rpx;
-  height: 200rpx;
-  margin-left: 140rpx;
+  width: 196rpx;
+  height: 171rpx;
+  margin-left: 160rpx;
   margin-top: -50rpx;
 }
 
 .cs-img-steps-bottom {
   width: 100%;
   height: 85rpx;
-  /* margin-top: -50rpx; */
+  margin-top: -30rpx;
 }
 
 .steps-info {
@@ -159,7 +159,7 @@ page {
 
 .ll-btn-invite {
   background: white;
-  padding-top: 40rpx;
+  padding-top: 30rpx;
   margin: 0 auto;
 }
 
