--- a/pages/rule_desc/index.wxml
+++ b/pages/rule_desc/index.wxml
@@ -2,13 +2,14 @@
   <view class="tv-title">小程序简介</view>
 
   <view class="tv-content">
-    这是一款运动健康为主的小程序，您可以通过每日的运动步数免费兑换平台内的任何商品。当然您还可以通过邀请好友得方式快速积攒金币兑换心仪的商品。
+    这是一款运动健康为主的小程序，您可以通过每日的运动步数来提升您的排名。通过步数排行版，来查看您在全国的排名以及总排名。
   </view>
 
   <view class="tv-title">什么是金币</view>
 
-  <view class="tv-content">
-    金币是用户在小程序里获得的奖励，可以在商城里兑换各种免费包邮的商品。
+  <view class="tv-content" >
+    <!-- 金币是用户在小程序里获得的奖励，可以在商城里兑换各种免费包邮的商品。 -->
+    金币是用户在小程序里获得的奖励。
   </view>
 
   <view class="tv-content">
@@ -33,13 +34,13 @@
     · 通过邀请未注册的好友，您可以获得10金币的奖励。
   </view>
 
-  <view class="tv-title">金币如何使用？</view>
+  <view class="tv-title" hidden="true">金币如何使用？</view>
 
-  <view class="tv-content">
+  <view class="tv-content" hidden="true">
     1、可以在商城专区选择自己喜欢的商品进行免邮兑换；
   </view>
 
-  <view class="tv-content">
+  <view class="tv-content"  hidden="true">
     2、金币可以累积，不清零。
   </view>
 
@@ -92,6 +93,6 @@
   </view>
 
   <view class="tv-content">
-    本程序提倡健康运动、自由兑换。一旦出现上述违规或恶意刷步行为，小程序平台有权判定订单无效进行账户清零。严重者将做永久封号处理。
+    本程序提倡健康运动。一旦出现上述违规或恶意刷步行为，小程序平台有权判定订单无效进行账户清零。严重者将做永久封号处理。
   </view>
 </view>
